--- a/.hintrc
+++ b/.hintrc
@@ -16,6 +16,12 @@
         "button-name": "off",
         "link-name": "off"
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ]
   }
 }
