--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
