checkout process pending

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API = "https://informed-flower-65edff8a30.strapiapp.com/api";
+VITE_API = "https://cozy-bell-fec76d07e6.strapiapp.com/api";
 VITE_FIREBASE_API_KEY="AIzaSyAqAxXUMLzQ-bUj0RVPhkkkdUPPnouEy4k"
 VITE_FIREBASE_AUTH_DOMAIN="cmart-65090.firebaseapp.com"
 VITE_FIREBASE_PROJECT_ID="cmart-65090"
