--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.8.0",
     "react-toastify": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
