--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "react-router-dom": "^6.8.0",
     "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0",
-    "sweetalert2": "^11.7.3"
+    "sweetalert2": "^11.7.3",
+    "vite-plugin-pages": "^0.32.3",
+    "vite-plugin-pages-sitemap": "^1.7.1",
+    "vite-plugin-sitemap": "^0.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
