--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-icons": "^1.10.3",
     "dotenv": "^16.4.5",
     "firebase": "^10.13.1",
+    "idb": "^8.0.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
